# TPOT-P2P

./: .gitignore  Anchor.toml  Cargo.toml  README.md  ROADMAP.md  docker-compose.yml  package.json  tsconfig.json
app/: package-lock.json  package.json  vercel.json
app/.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
app/.next/server/: middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json
app/.next/server/chunks/: 334.js
app/.next/server/pages/: 404.html  500.html  _app.js  _app.js.nft.json  _error.js  _error.js.nft.json  index.html  index.js.nft.json  profile.html  trade.html  (+1 more)
app/src/components/: CreateOrderModal.tsx  OrderDetailModal.tsx  SettingsModal.tsx  WalletProvider.tsx  ui.tsx
app/src/context/: P2PContext.tsx
app/src/i18n/: LanguageContext.tsx  translations.ts
app/src/idl/: tpot_p2p.ts
app/src/lib/: api.ts  theme.ts
app/src/pages/: _app.tsx  index.tsx  profile.tsx  trade.tsx
app/src/store/: p2pStore.ts
docs/: SPECIFICATION.md
programs/tpot-p2p/: Cargo.toml
programs/tpot-p2p/src/: accounts.rs  dispute.rs  escrow.rs  lib.rs  order.rs  reputation.rs  utils.rs
scripts/: deploy.sh
server/: .env.example  package.json
server/sql/: init.sql
server/src/: db.ts  index.ts
server/src/config/: database.ts
server/src/db/: index.ts
server/src/routes/: orders.ts  users.ts
server/src/services/: solana.ts  usdt.ts
tests/: tpot-p2p.ts
(+16 files in other folders)
