[package]
name = "tpot-p2p"
version = "0.1.0"
description = "TykhePot P2P Token Trading Platform"
edition = "2021"
license = "MIT"
repository = "https://github.com/tykhepot/tpot-p2p"

[lib]
crate-type = ["cdylib", "lib"]
name = "tpot_p2p"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "1.17.0"

[dev-dependencies]
anchor-client = "0.30.0"
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
