[package]
name = "tpot-p2p"
version = "0.1.0"
description = "TykhePot P2P Token Trading Platform"
edition = "2021"
license = "MIT"
repository = "https://github.com/tykhepot/tpot-p2p"

[lib]
crate-type = ["cdylib", "lib"]
name = "tpot_p2p"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.30.0", features = ["init-if-needed"] }
anchor-spl = "=0.30.0"
constant_time_eq = "=0.3.1"
blake3 = "=1.7.0"
